Update auth endpoint docs
